# JetsonNanoTest

./: README.MD
C_OpenCV_PiCamera/: README.MD  main.cpp
Python_EdgeTPU/: README.MD  run_tflite_edgetpu.py
Python_Keras/: README.MD  test_mobilenet_speed.py  test_mobilenetv2.py
Python_OpenCV_PiCamera/: README.MD  test_opencv.py
TensorRT/mobilenet_v2/: CMakeLists.txt  README.md  main.cpp
